infra/apps/self-serve-example/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-serve-example
  annotations:
    external-dns.alpha.kubernetes.io/hostname: self-serve.tw-ocean.com
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: self-serve-example
