infra/apps/self-serve-example/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: self-serve-example-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/group.name: "sandbox-external"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:386757133934:certificate/f3618733-cee3-4704-8bb3-2ba753cbd56e
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06


spec:
  ingressClassName: alb
  rules:
    - host: self-serve.tw-ocean.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: self-serve-example
                port:
                  number: 80
